<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verify_otp_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".Authentication.VerifyOtpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:layout_gravity="center"
                android:layout_marginBottom="40sp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/doctor" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="20sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:text="@string/verifyotp"
                        android:textColor="@color/primary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/verify_otp_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10sp"
                        android:layout_marginTop="10sp"
                        android:fontFamily="@font/regular"
                        android:gravity="center"
                        android:text="@string/otpsentto"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/verify_otp_otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20sp"
                        android:layout_marginTop="20sp"
                        android:autofillHints="no"
                        android:background="@drawable/custom_editext"
                        android:drawableStart="@drawable/password"
                        android:drawablePadding="10sp"
                        android:fontFamily="@font/regular"
                        android:gravity="center"
                        android:hint="@string/enterotp"
                        android:inputType="number"
                        android:padding="10sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/secondary"
                        android:textSize="15sp" />


                    <Button
                        android:id="@+id/verify_otp_verify_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20sp"
                        android:backgroundTint="@color/primary"
                        android:fontFamily="@font/bold"
                        android:text="@string/submit"
                        android:textColor="@color/secondary"
                        android:textSize="15sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/verify_otp_resend_otp_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20sp"
                            android:backgroundTint="@color/primary"
                            android:fontFamily="@font/bold"
                            android:gravity="center"
                            android:text="@string/resendotp"
                            android:textColor="@color/secondary"
                            android:textSize="15sp"
                            app:icon="@drawable/refresh"
                            app:iconTint="@color/secondary" />

                        <TextView
                            android:id="@+id/verify_otp_otp_timer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/verify_otp_resend_otp_btn"
                            android:fontFamily="@font/regular"
                            android:text="00:00"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>